improved exception handlers